tests/models/struct/unnamed/u8/fail/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1.0)]
    u8
);
fn main() {}
